welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: value color
		T(i) = color(i)
                       ^Array1:8: error: not found: value getMondeCouleur
		T(i)=getMondeCouleur()
                     ^