welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var T = new Array[Color](getMondeHauteur());
	for (i <- 1 to T.length) {
		T(i) = color(i)
	}
	for (i<- 1 to getMondeHauteur()){
		T(i)=getMondeCouleur()
		avance()
	}
	for(i<-1 to getMondeLargeur()) {
		baisseBrosse()
		leveBrosse()
		avance()
	}
	
	
}
